# vidio_school_system

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  DEMO_GUIDE.md  DEMO_README.md  README.md  demo.bat  demo.sh  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  start.bat  start.sh  start_demo.bat  start_demo.sh  stop.bat  stop.sh
apps/api/: main.py  requirements.txt
apps/api/app/core/: __init__.py  config.py  database.py  redis.py
apps/api/app/models/: __init__.py  clip.py  event.py  review.py  stream.py  training_job.py
apps/api/app/routers/: __init__.py  clips.py  events.py  health.py  metrics.py  reviews.py  streams.py  streams_old.py  system.py  training.py
apps/api/app/routers/backup/: clips.py  (+4 more)
apps/api/app/schemas/: __init__.py  clip.py  common.py  event.py  metrics.py  review.py  stream.py  training.py
apps/api/app/services/: __init__.py  event_publisher.py  stream_runtime.py  websocket_manager.py
apps/web/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx
apps/web/app/(dashboard)/: globals.css  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/lib/: api.ts
apps/web/types/: index.ts
docs/: algorithm-dev.md  api-contract.md  api-reference.md  architecture.md  backend-dev.md  benchmark.md  competition-report.md  demo-script.md  deployment.md  frontend-dev.md
infra/docker/: ai-runtime.Dockerfile  api.Dockerfile  web.Dockerfile
rool/: 00_USE_ME_FIRST.md  01_PROJECT_CONTEXT.md  02_REPO_STRUCTURE.md  03_GLOBAL_ENGINEERING_RULES.md  04_RULE_FRONTEND.md  05_RULE_BACKEND.md  06_RULE_STREAM_CORE.md  07_RULE_AI_RUNTIME.md  08_RULE_API_EVENT_SCHEMA.md  09_RULE_UI_STYLE.md  10_PHASE_PLAN_P0_P6.md  11_SKILL_MONOREPO_ARCHITECT.md  12_SKILL_CPP_STREAM_RUNTIME.md  13_SKILL_FASTAPI_REALTIME.md  14_SKILL_NEXTJS_WECHAT_ADMIN.md  15_SKILL_PERF_BENCHMARK.md  16_PROMPT_BOOTSTRAP_AND_INSTALL_SKILLS.md  17_PROMPT_START_P0.md  18_PROMPT_PHASES_P1_TO_P6.md
scripts/: benchmark_all.py  benchmark_clip_export.py  benchmark_multi.py  benchmark_single.py  benchmark_stability.py  benchmark_websocket.py  fix_router_response_models.sh  fix_routers.py
scripts/benchmark_results/: benchmark_single_20260405_161736.json
services/ai-runtime/: TEST_SUMMARY.md  demo_behavior_detection.py  demo_final.py  demo_fixed.py  demo_simple.py  main.py  requirements.txt  test_phase1.py  test_single_video.py  video_test.py
services/ai-runtime/src/ai_runtime/: __init__.py  config.py  models.py  pipeline.py
services/mock-streamer/: demo_data_generator.py  demo_routes.py  demo_server.py  mock_streamer.py  yolo26_infer.py
services/stream-core/: CMakeLists.txt  README.md
services/stream-core/bindings/python/: stream_core.py
services/stream-core/build_mingw/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
services/stream-core/build_mingw/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
services/stream-core/include/stream_core/: bounded_queue.hpp  c_api.hpp  clip_exporter.hpp  ffmpeg_decoder.hpp  metrics_collector.hpp  reconnect_controller.hpp  ring_buffer.hpp  stream_manager.hpp  stream_session.hpp  thread_pool.hpp  types.hpp
services/stream-core/src/: bounded_queue.cpp  c_api.cpp  clip_exporter.cpp  ffmpeg_decoder.cpp  main.cpp  metrics_collector.cpp  reconnect_controller.cpp  stream_manager.cpp  stream_session.cpp  thread_pool.cpp  types.cpp
services/stream-core/tests/: CMakeLists.txt  stream_core_tests.cpp  test_bounded_queue.cpp  test_stream_lifecycle.cpp  test_thread_pool.cpp
(+14 files in other folders)
